--- a/Index.html
+++ b/Index.html
@@ -1,3 +1,14 @@
 <!DOCTYPE html>
 <html>
+	<head>
+	  <link rel="stylesheet" media="screen and (min-width: 1600px)" href="estiloLG.css">
+	  <link rel="stylesheet" media="screen and (max-width: 360px)" href="estiloSM.css">
+	  <link href="https://fonts.googleapis.com/css?family=Baloo" rel="stylesheet">
+	</head>
+	<body>
+		<div id="green"><p>A</p></div>
+		<div id="yellow"><p>B</p></div>
+		<div id="green"><p>C</p></div>
+		<div id="yellow"><p>D</p></div>
+	</body>
 </html>
