--- a/Taller 1/index.html
+++ b/Taller 1/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
+	  <title>Taller 1: CSS y HTML</title>
 	  <link rel="stylesheet" media="screen and (min-width: 1600px)" href="estiloLG.css">
 	  <link rel="stylesheet" media="screen and (max-width: 360px)" href="estiloSM.css">
 	  <link href="https://fonts.googleapis.com/css?family=Baloo" rel="stylesheet">
